홈페이지 변경

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <title>WEB1 - WEB </title>
  <meta charset="utf-8">
  </head>
+    <h1>전효정 홈페이지</h1>
  <body>
  <h1><a href="index.html">WEB</a></h1>
  <ol>
