애완동물 홈페이지

--- a/2.html
+++ b/2.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
  <html>
  <head>
- <title>WEB1 - CSS </title>
+ <title>애완동물 - 고양이 </title>
  <meta charset="utf-8">
  </head>
  <body>
- <h1><a href="index.html">WEB</a></h1>
+ <h1><a href="index.html">애완동물</a></h1>
  <ol>
- <li><a href="1.html">HTML</a></li>
- <li><a href="2.html">CSS</a></li>
- <li><a href="3.html">JavaScript</a></li>
+ <li><a href="1.html">강아지</a></li>
+ <li><a href="2.html">고양이</a></li>
+ <li><a href="3.html">햄스터</a></li>
  </ol>
- <h2>CSS란 무엇인가?</h2>
+ <h2>고양이란 ?</h2>
  <p style="margin-top: 40px;">
  Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation 
 of a document written in a markup language such as HTML.[1] CSS is a cornerstone technology 
@@ -22,6 +22,6 @@ and control in the specification of presentation characteristics; enable multipl
 share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity 
 and repetition in the structural content
  </p>
- <img src="coding.jpg" width="100%">
+ <img src="고양이.jpg" width="100%">
  </body>
  </html>
