--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
  <title>WEB1 - WEB </title>
  <meta charset="utf-8">
  </head>
-    <h1>전효정 홈페이지</h1>
  <body>
- <h1><a href="index.html">WEB</a></h1>
+    <h1>전효정 홈페이지</h1>
+ <h1><a href="index.html">애완동물</a></h1>
  <ol>
- <li><a href="1.html">HTML</a></li>
- <li><a href="2.html">CSS</a></li>
- <li><a href="3.html">JavaScript</a></li>
+ <li><a href="1.html">강아지</a></li>
+ <li><a href="2.html">고양이</a></li>
+ <li><a href="3.html">햄스터</a></li>
  </ol>
  <h2>WEB이란 무엇인가?</h2>
  <p style="margin-top: 40px;">
