--- a/1.html
+++ b/1.html
@@ -12,18 +12,11 @@
  <li><a href="3.html">햄스터</a></li>
  </ol>
  <h2>강아지란 ?</h2>
- <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/"  title="HTML5 specification">Hypertext Markup 
-Language(HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web 
-applications.
- Web browsers receive HTML documents from a web server or from local storage and render the documents into 
-multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the 
-appearance of the document.</p>
+ <p>강아지 나무위키<a href="https://namu.wiki/w/%EA%B0%95%EC%95%84%EC%A7%80"  title="강아지 나무위키">Hypertext Markup 
+</p>
  <img src="강아지.jpg" width="100%">
  <p style="margin-top: 40px;">
- HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as 
-interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by 
-denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are 
-delineated by tags, written using angle brackets.
+    <h2>귀엽다</h2>
  </p>
  </body>
  </html>
