--- a/2.html
+++ b/2.html
@@ -12,16 +12,10 @@
  <li><a href="3.html">햄스터</a></li>
  </ol>
  <h2>고양이란 ?</h2>
- <p style="margin-top: 40px;">
- Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation 
-of a document written in a markup language such as HTML.[1] CSS is a cornerstone technology 
-of the World Wide Web, alongside HTML and JavaScript.[2]
- CSS is designed to enable the separation of presentation and content, including layout, 
-colors, and fonts.[3] This separation can improve content accessibility; provide more flexibility 
-and control in the specification of presentation characteristics; enable multiple web pages to 
-share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity 
-and repetition in the structural content
- </p>
+ <p>고양이 나무위키<a href="https://namu.wiki/w/%EA%B3%A0%EC%96%91%EC%9D%B4"  title="고양이 나무위키">Hypertext Markup 
+</p>
  <img src="고양이.jpg" width="100%">
+ <p style="margin-top: 40px;">
+    <h2>귀엽다</h2>
  </body>
  </html>
