--- a/3.html
+++ b/3.html
@@ -12,12 +12,10 @@
  <li><a href="3.html">햄스터</a></li>
  </ol>
  <h2>햄스터란?</h2>
- <p style="margin-top: 40px;">
- JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of 
-the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites 
-use JavaScript on the client side for web page behavior,[12] often incorporating third-party 
-libraries.[13] All major web browsers have a dedicated JavaScript engine to execute
- </p>
+ <p>햄스터 나무위키<a href="https://namu.wiki/w/%ED%96%84%EC%8A%A4%ED%84%B0"  title="햄스터 나무위키">Hypertext Markup 
+</p>
  <img src="햄스터.jpg" width="100%">
+ <p style="margin-top: 40px;">
+    <h2>귀엽다</h2>
  </body>
  </html>
