--- a/1.html
+++ b/1.html
@@ -12,7 +12,7 @@
  <li><a href="3.html">햄스터</a></li>
  </ol>
  <h2>강아지란 ?</h2>
- <p>강아지 설명 > <a href="https://namu.wiki/w/%EA%B0%95%EC%95%84%EC%A7%80"  title="강아지 나무위키">강아지 나무위키</a>
+ <p>강아지 설명 > <a href="https://namu.wiki/w/%EA%B0%95%EC%95%84%EC%A7%80"  title="강아지 나무위키">강아지 나무위키 바로가기</a>
 </p>
  <img src="강아지.jpg" width="100%">
  <p style="margin-top: 40px;">
