--- a/2.html
+++ b/2.html
@@ -12,7 +12,7 @@
  <li><a href="3.html">햄스터</a></li>
  </ol>
  <h2>고양이란 ?</h2>
- <p>고양이 나무위키<a href="https://namu.wiki/w/%EA%B3%A0%EC%96%91%EC%9D%B4"  title="고양이 나무위키">Hypertext Markup 
+ <p>고양이 설명 ><a href="https://namu.wiki/w/%EA%B3%A0%EC%96%91%EC%9D%B4"  title="고양이 나무위키">고양이 나무위키 바로가기</a>
 </p>
  <img src="고양이.jpg" width="100%">
  <p style="margin-top: 40px;">
