--- a/3.html
+++ b/3.html
@@ -12,7 +12,7 @@
  <li><a href="3.html">햄스터</a></li>
  </ol>
  <h2>햄스터란?</h2>
- <p>햄스터 나무위키<a href="https://namu.wiki/w/%ED%96%84%EC%8A%A4%ED%84%B0"  title="햄스터 나무위키">Hypertext Markup 
+ <p>햄스터 설명 ><a href="https://namu.wiki/w/%ED%96%84%EC%8A%A4%ED%84%B0"  title="햄스터 나무위키">햄스터 나무위키 바로가기</a>
 </p>
  <img src="햄스터.jpg" width="100%">
  <p style="margin-top: 40px;">
