--- a/1.html
+++ b/1.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
  <html>
  <head>
- <title>애완동물 - 강아지 </title>
+ <title>WEB1 - HTML </title>
  <meta charset="utf-8">
  </head>
  <body>
- <h1><a href="index.html">애완동물</a></h1>
+ <h1><a href="index.html">WEB</a></h1>
  <ol>
- <li><a href="1.html">강아지</a></li>
- <li><a href="2.html">고양이</a></li>
- <li><a href="3.html">햄스터</a></li>
+ <li><a href="1.html">HTML</a></li>
+ <li><a href="2.html">CSS</a></li>
+ <li><a href="3.html">JavaScript</a></li>
  </ol>
- <h2>강아지란 ?</h2>
- <p>강아지 설명 > <a href="https://namu.wiki/w/%EA%B0%95%EC%95%84%EC%A7%80"  title="강아지 나무위키">강아지 나무위키 바로가기</a>
-</p>
+ <h2>HTML이란 무엇인가?</h2>
+ <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/"  title="HTML5 specification">Hypertext Markup 
+Language(HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web 
+applications.
+ Web browsers receive HTML documents from a web server or from local storage and render the documents into 
+multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the 
+appearance of the document.</p>
  <img src="강아지.jpg" width="100%">
  <p style="margin-top: 40px;">
-    <h2>귀엽다</h2>
+ HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as 
+interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by 
+denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are 
+delineated by tags, written using angle brackets.
  </p>
  </body>
  </html>
