--- a/2.html
+++ b/2.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
  <html>
  <head>
- <title>애완동물 - 고양이 </title>
+ <title>WEB1 - CSS </title>
  <meta charset="utf-8">
  </head>
  <body>
- <h1><a href="index.html">애완동물</a></h1>
+ <h1><a href="index.html">WEB</a></h1>
  <ol>
- <li><a href="1.html">강아지</a></li>
- <li><a href="2.html">고양이</a></li>
- <li><a href="3.html">햄스터</a></li>
+ <li><a href="1.html">HTML</a></li>
+ <li><a href="2.html">CSS</a></li>
+ <li><a href="3.html">JavaScript</a></li>
  </ol>
- <h2>고양이란 ?</h2>
- <p>고양이 설명 ><a href="https://namu.wiki/w/%EA%B3%A0%EC%96%91%EC%9D%B4"  title="고양이 나무위키">고양이 나무위키 바로가기</a>
-</p>
- <img src="고양이.jpg" width="100%">
+ <h2>CSS란 무엇인가?</h2>
  <p style="margin-top: 40px;">
-    <h2>귀엽다</h2>
+ Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation 
+of a document written in a markup language such as HTML.[1] CSS is a cornerstone technology 
+of the World Wide Web, alongside HTML and JavaScript.[2]
+ CSS is designed to enable the separation of presentation and content, including layout, 
+colors, and fonts.[3] This separation can improve content accessibility; provide more flexibility 
+and control in the specification of presentation characteristics; enable multiple web pages to 
+share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity 
+and repetition in the structural content
+ </p>
+ <img src="고양이.jpg" width="100%">
  </body>
  </html>
