--- a/3.html
+++ b/3.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
  <html>
  <head>
- <title>애완동물 - 햄스터 </title>
+ <title>WEB1 - JavaScript </title>
  <meta charset="utf-8">
  </head>
  <body>
- <h1><a href="index.html">애완동물</a></h1>
+ <h1><a href="index.html">WEB</a></h1>
  <ol>
- <li><a href="1.html">강아지</a></li>
- <li><a href="2.html">고양이</a></li>
- <li><a href="3.html">햄스터</a></li>
+ <li><a href="1.html">HTML</a></li>
+ <li><a href="2.html">CSS</a></li>
+ <li><a href="3.html">JavaScript</a></li>
  </ol>
- <h2>햄스터란?</h2>
- <p>햄스터 설명 ><a href="https://namu.wiki/w/%ED%96%84%EC%8A%A4%ED%84%B0"  title="햄스터 나무위키">햄스터 나무위키 바로가기</a>
-</p>
- <img src="햄스터.jpg" width="100%">
+ <h2>JavaScript 무엇인가?</h2>
  <p style="margin-top: 40px;">
-    <h2>귀엽다</h2>
+ JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of 
+the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites 
+use JavaScript on the client side for web page behavior,[12] often incorporating third-party 
+libraries.[13] All major web browsers have a dedicated JavaScript engine to execute
+ </p>
+ <img src="햄스터.jpg" width="100%">
  </body>
  </html>
