--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
  <html>
  <head>
- <title>애완동물 홈페이지 </title>
+ <title>mY hOMEPAGE </title>
  <meta charset="utf-8">
  </head>
  <body>
     <h1>전효정 홈페이지</h1>
- <h1><a href="index.html">애완동물</a></h1>
+ <h1><a href="index.html">WEB</a></h1>
  <ol>
- <li><a href="1.html">강아지</a></li>
- <li><a href="2.html">고양이</a></li>
- <li><a href="3.html">햄스터</a></li>
+ <li><a href="1.html">HTML</a></li>
+ <li><a href="2.html">CSS</a></li>
+ <li><a href="3.html">JavaScript</a></li>
  </ol>
- <h2>애완동물은?</h2>
+ <h2>WEB이란 무엇인가?</h2>
  <p style="margin-top: 40px;">
-귀엽다
+ The World Wide Web (WWW), commonly known as the Web, is the world's dominant software platform.[1] It was 
+originally a hypertext document management system[2] accessed over the Internet.[3]
+ The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP), may be accessed by users by 
+a software application called a web browser, and are published by a software application called a web server.
+ Web resources may be any type of downloaded media, but web pages are hypertext documents formatted in 
+Hypertext Markup Language (HTML). Special HTML syntax displays embedded hyperlinks with URLs, which permits users 
+to navigate to other web resources. In addition to text, web pages may contain references to images, video, audio, and 
+software components, which are either displayed or internally executed in the user's web browser to render pages or 
+streams of multimedia conten
  </p>
+ <img src="coding.jpg" width="100%">
  </body>
  </html>
