--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
  <head>
  <title>mY hOMEPAGE </title>
  <meta charset="utf-8">
+ <style>
+   /* 요소{
+            키 : 값 구분자(;)
+         } */
+   /* 모든 a태그에 폰트 속성 변경 */
+   a{
+      text-decoration: none; /*a라인은 밑줄필수인데 밑줄을 없앰*/
+      font-size: 30px;
+      font-style: italic;
+      color:aqua;
+   }
+
+ </style>
  </head>
  <body>
-    <h1>전효정 홈페이지</h1>
- <h1><a href="index.html">WEB</a></h1>
+     <h1>전효정 홈페이지</h1>
+ <!-- <h1><a href="index.html"><font color="red">WEB</font></a></h1> -->
+ <!-- 밑에 작성한 레드가 우선순위임 -->
+ <h1><a href="index.html" style="color : red;">WEB</font></a></h1>
  <ol>
  <li><a href="1.html">HTML</a></li>
- <li><a href="2.html">CSS</a></li>
+  <!-- 특정 문장만 밑줄 긋기 -->
+ <li><a href="2.html" style="text-decoration:underline">CSS</a></li>
  <li><a href="3.html">JavaScript</a></li>
  </ol>
  <h2>WEB이란 무엇인가?</h2>
