스터디 그룹 참여페이지

--- a/gpttest/gpttest.html
+++ b/gpttest/gpttest.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <div id="profile-menu-container">
+        <div id="profile-menu-container"> <!-- 프로필과 메뉴를 하나로 묶어서 세로정렬하기-->
             <aside id="profile-section">
                 <img src="blue.jpg" alt="내 프로필 사진" id="profile-pic">
                 <p id="username">전효정</p>
@@ -24,6 +24,7 @@
             <section id="menu-section">
                 <h2>메뉴</h2>
                 <ul id="menu-list">
+                    <li>마이페이지</li>
                     <li>캘린더</li>
                     <li>자료 공유</li>
                     <li>과제/목표</li>
