--- a/gpttest/gpttest.html
+++ b/gpttest/gpttest.html
@@ -18,7 +18,7 @@
             <aside id="profile-section">
                 <img src="blue.jpg" alt="내 프로필 사진" id="profile-pic">
                 <p id="username">전효정</p>
-                <p id="myself">안녕하세요 자기소개 입니다</p>
+                <p id="myself">안녕하세요 자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개</p>
             </aside>
     
             <section id="menu-section">
