--- a/Study_with_us/1_index.html
+++ b/Study_with_us/1_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study with us</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="1_index.css">
 </head>
 <body>
     <header>
