--- a/Study_with_us/4_MadeStudy.html
+++ b/Study_with_us/4_MadeStudy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study with us! - Create Study Group</title>
-    <link rel="stylesheet" href="gpttest.css"> <!-- CSS 파일 연결 -->
+    <link rel="stylesheet" href="4_MadeStudy.css"> <!-- CSS 파일 연결 -->
 </head>
 
 <body>
