--- a/web/3.html
+++ b/web/3.html
@@ -4,74 +4,26 @@
 <head>
     <title>WEB1 - JavaScript </title>
     <meta charset="utf-8">
-
-    <style>
-        a {
-            text-decoration: none;
-            color: black;
-        }
-
-        h4 {
-            font-size: 45px;
-            text-align: center;
-            border-bottom: 1px solid gray;
-            margin: 0;
-        }
-
-        ol {
-            border-right: 1px solid gray;
-            width: 150px;
-            margin: 0;
-            padding: 20px;
-            color: red;
-        }
-
-
-        #grid {
-            display: grid;
-            grid-template-columns: 1fr 4fr;
-        }
-
-        @media(max-width: 800px) {
-            #grid {
-                display: block;
-            }
-            #grid ol {
-                border-right: none;
-            }
-
-            h4 {
-                border-bottom: none;
-            }
-            
-        }
-
-        #article {
-            color: green;
-        }
-
-        #red{
-            color: red;
-        }
-    </style>
-
+    <link rel="stylesheet" href="style.css" />
+    <script src="colors.js"></script> 
 </head>
 
 <body>
-    <h4><a href="index.html">WEB</a></h4>
+    <h1><a href="index.html">WEB</a></h1>
+
+    <!-- this,  해당 객체를 가리키는 키워드 , 
+    현재, input 속 안에서, this -> input 태그를 가리킴. -->
+    <input id="night_day" type="button" value="night" onclick="nightDayHandler(self)">
+     
 
     <div id="grid">
-
         <ol>
             <li><a href="1.html">HTML</a></li>
             <li><a href="2.html">CSS</a></li>
             <li><a href="3.html">JavaScript</a></li>
-
         </ol>
-
         <div id="article">
-
-            <h2 id="red">JavaScript 무엇인가?</h2>
+            <h2>JavaScript 무엇인가?</h2>
             <p style="margin-top: 40px;">
                 JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of
                 the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites
@@ -79,11 +31,9 @@
                 libraries.[13] All major web browsers have a dedicated JavaScript engine to execute
             </p>
             <img src="햄스터.jpg" width="100%">
-
         </div>
 
     </div>
-
 </body>
 
 </html>
