방명록사이즈변경

--- a/myhompee/hompee.html
+++ b/myhompee/hompee.html
@@ -31,7 +31,7 @@
         <main>
             <div class="content">
                 <section class="intro" id="intro">
-                    <h2>소개</h2>
+                    <h2><a href="#intro">공부중</a></h2>
                     <p>안녕하세요! 저는 웹 개발과 디자인을 좋아하는 사람입니다. 제 취미는 여행과 사진 촬영입니다.</p>
                 </section>
 
@@ -56,6 +56,10 @@
 
                 <section class="guestbook">
                     <h2>방명록</h2>
+                    <div class="messages">
+                        <div class="message">방명록 첫 번째 메시지 내용</div>
+                        <div class="message">방명록 두 번째 메시지 내용</div>
+                    </div>
                     <form>
                         <label for="name">이름:</label>
                         <input type="text" id="name" required>
@@ -63,12 +67,8 @@
                         <textarea id="message" required></textarea>
                         <button type="submit">전송</button>
                     </form>
-                    <div class="messages">
-                        <h3>방명록 내용</h3>
-                        <div class="message">방명록 첫 번째 메시지 내용</div>
-                        <div class="message">방명록 두 번째 메시지 내용</div>
-                    </div>
                 </section>
+                
             </div>
 
             <section class="gallery" id="gallery">
